# community_platform

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  docker-compose.yml  pyproject.toml  red.py  ruff.toml
.ropeproject/: history
apps/callbot_calendar/: .dockerignore  Dockerfile  google_calendar.py  pyproject.toml  schema.py
apps/callbot_calendar/src/callbot_calendar/: callbot_api.py  callbot_calendar_manager.py  google_calendar.py  schema.py  settings.py
apps/db_proxy/: Dockerfile  main.py  pyproject.toml
apps/db_proxy/src/db_proxy/auth/: __init__.py  router.py
apps/db_proxy/src/db_proxy/media_storage/: s3_proxy.py  schemas.py
apps/db_proxy/src/db_proxy/meetings/: meeting_manager.py
apps/db_proxy/src/db_proxy/users/: router.py
apps/linkedin_verifier/: .env.example  Dockerfile  README.md  README2.md  README_diagrams.md  alembic.ini  community_profiles_from_Olya.csv  config.py  loader.py  main.py  migrate_profiles.py  parse_profiles.py  pyproject.toml  requirements.txt  todo.md
apps/linkedin_verifier/data/linkedin_profiles_dump/: education.json  profiles.json
apps/linkedin_verifier/migrations/: env.py
apps/linkedin_verifier/migrations/versions/: 19e74f152252_initial_migration.py
apps/linkedin_verifier/src/: exceptions.py  types.py
apps/linkedin_verifier/src/api/v1/: api.py
apps/linkedin_verifier/src/db/: __init__.py  db_manager.py
apps/linkedin_verifier/src/db/models/: limits.py
apps/linkedin_verifier/src/linkedin/: base.py  factory.py  helpers.py  service.py
apps/linkedin_verifier/src/linkedin/providers/: mock_data.py  scrapin.py  tomquirk.py
apps/linkedin_verifier/src/pubsub/: handlers.py
apps/linkedin_verifier/src/schemas/: pubsub.py
apps/matching/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/matching/src/matching/: config.py  data_loader.py  main.py  matching.py  services.py
apps/matching/src/matching/model/: __init__.py  model.py  model_settings.py
apps/matching/src/matching/parser/: __init__.py  form_parser_service.py  gemini_parser.py  test_gemini_parser.py
apps/matching/tests/: conftest.py  test_form_parser_service.py  test_gemini_parser.py  test_heuristic_predictor.py  test_matching.py  test_matching_endpoint.py  test_pubsub_text_matching.py  test_text_matching.py
apps/notifications/: .gitignore  Dockerfile  README.md  pyproject.toml
apps/notifications/src/notifications/: config.py  loader.py  main.py
apps/notifications/src/notifications/logic/: incoming_message.py  outgoing_message.py
apps/notifications/src/notifications/smtp_mailing/: client.py
apps/notifications/src/notifications/utils/: logging.py
apps/notifications/tests/: conftest.py  test_broker.py  test_notification_types.py  test_notification_validation.py  test_notifications.py
apps/telegram_bot/: Dockerfile  README.md  bot.py  main.py  pyproject.toml
apps/telegram_bot/src/logging/: middleware.py  schemas.py
apps/telegram_bot/src/staff/: models.py  router.py  schemas.py
apps/telegram_bot/src/staff/handlers/: start.py
apps/telegram_bot/src/telegram_bot/: main.py
apps/telegram_bot/src/tools/: safe_msg_send.py
apps/telegram_bot/src/user/: router.py  schemas.py
apps/telegram_bot/src/user/handlers/: other.py
apps/telegram_bot/tests/web/: test_health.py
apps/web_gateway/: Dockerfile  README.md  TODO  cloudbuild.yaml  loader.py  main.py  pyproject.toml  run_tests.sh
apps/web_gateway/public_config/: emitter_settings.json  limits.json  matching_requests.json  secret_files.json
apps/web_gateway/src/web_gateway/: settings.py
apps/web_gateway/src/web_gateway/auth/: __init__.py  router.py  security.py
apps/web_gateway/src/web_gateway/communities_companies_domains/: manager.py  router.py
apps/web_gateway/tests/web/: conftest.py  test_enums.py  test_users.py  utils.py
config/: db.json  (+2 more)
matching/: .dockerignore  Dockerfile  pyproject.toml  ruff.toml
matching/app/: data_loader.py  main.py  matching.py  services.py
matching/app/common_db/: __init__.py  config.py  db_abstract.py  models.py  schemas.py
matching/app/config/: config_loader.py
matching/app/config/config_proto/: config.proto  config.textproto  config_pb2.py
matching/app/model/: __init__.py  model.py  model_settings.py  predictors.py
matching/app/transport/: __init__.py
matching/app/transport/persistent_storage/: __init__.py  persistent_adapter.py  persistent_client.py
matching/app/transport/queueing/: __init__.py  google_queue.py
matching/tests/: conftest.py  test_matching.py  test_matching_endpoint.py
telegram-bot/: Dockerfile  pyproject.toml  requirements.txt
telegram-bot/src/: main.py
telegram-bot/src/tests/: test_main.py
vacancies/: Dockerfile  README.md  pyproject.toml
vacancies/app/: check.py  main.py
vacancies/app/config/: __init__.py  config.py  logger.py  monitoring.py
vacancies/app/core/data_extractor/: extractor.py  processor.py  structure_vacancy.py
vacancies/app/core/link_extractor/: __init__.py  base.py
vacancies/app/data_extractor/: __init__.py  extractor.py  processor.py  structure_vacancy.py
vacancies/app/db/: __init__.py  connection.py  settings.py  vacancy_repository.py  vacancy_schema.py
vacancies/app/link_extractor/: __init__.py  base.py
vacancies/app/link_extractor/booking/: extractor.py
vacancies/app/link_extractor/indriver/: extractor.py
vacancies/app/link_extractor/tinkoff/: extractor.py
vacancies/app/link_extractor/wargaming/: extractor.py
vacancies/notebooks/: Crawler.ipynb  creator.py  result.py  test.py
vacancies/src/: main.py
vacancies/src/link_extractor/: base.py
vacancies/src/link_extractor/booking/: extractor.py
vacancies/src/link_extractor/indriver/: extractor.py
vacancies/src/link_extractor/wargaming/: extractor.py
vacancies/tests/: conftest.py  test_extractors.py  test_monitoring.py  test_processor.py  test_vacancy_extractor.py
vacancies/tests/data_extractor/: test_processor.py  test_vacancy_extractor.py
vacancies/tests/link_extractor/: test_booking_extractor.py  test_extractors.py  test_indriver_extractor.py  test_wargaming_extractor.py
(+206 files in other folders)
