[project]
name = "community-platform"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.2",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "google-cloud-storage>=2.18.2",
    "google-cloud-pubsub>=2.27.1",
    "pandas>=2.1.4",
    "catboost>=1.2.5",
]

[tool.uv]
dev-dependencies = [
    "debugpy>=1.8.7",
    "pylint>=3.3.1",
    "ruff>=0.7.0",
]

[tool.setuptools.packages.find]
include = ["db_common*"] 