[project]
name = "matching"
version = "0.0.1"
description = "Users matching service"
readme = "README.md"
requires-python = "==3.12.7"
dependencies = [
    "aiofiles>=24.1.0",
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.115.2",
    "google-cloud-logging>=3.11.3",
    "google-cloud-storage>=2.18.2",
    "google-cloud-secret-manager>=2.20.0",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "python-multipart>=0.0.7",
    "asyncpg>=0.30.0",
    "pip>=24.2",
    "setuptools>=75.2.0",
    "debugpy>=1.8.7",
    "cloud-sql-python-connector>=1.13.0",
    "pg8000>=1.31.2",
    "google-cloud-pubsub>=2.27.1",
    "catboost==1.2.7",
    "pandas>=2.1.4",
    "numpy>=1.26.4",
    "db-common",
]

[tool.uv]
dev-dependencies = [
    "debugpy>=1.8.7",
    "pylint>=3.3.1",
    "ruff>=0.7.0",
]

[tool.uv.sources]
db-common = { path = "db_common" }
