[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Aleksandr Nemirov <sasha-nemirov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = {extras = ["contrib"], version = "^3.13.1"}
aiohttp = "^3.10.6"
pytest = "^8.3.3"
google-cloud-secret-manager = "^2.20.2"
google = "^3.0.0"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
proto-plus = "1.24.0.dev1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
