[project]
name = "vacancies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloud-sql-python-connector[asyncpg]>=1.16.0",
    "langchain>=0.3.14",
    "langchain-google-vertexai>=2.0.11",
    "loguru>=0.7.3",
    "playwright>=1.49.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.37",
    "google-cloud-logging>=3.11.3",
    "pg8000>=1.31.2",
]

[tool.uv]
dev-dependencies = [
    "browser-use>=0.1.8",
    "debugpy>=1.8.11",
    "ipykernel>=6.29.5",
    "pip>=24.3.1",
    "ruff>=0.9.1",
]
