[project]
name = "db_proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "und3v3l0p3d", email = "prohibitme@ya.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "common-db",
    "event-emitter",
    "fastapi>=0.115.6",
    "gcloud-aio-storage>=9.3.0",
    "jwt>=1.3.1",
    "pillow>=11.0.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
common-db = { path = "../../packages/common_db" }
event-emitter = { path = "../../packages/event_emitter" }
