[project]
name = "linkedin-verifier"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.7"
dependencies = [
    "aiohttp>=3.11.12",
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "common-db>=0.1.1",
    "fastapi>=0.115.7",
    "loguru>=0.7.3",
    "message-broker>=0.1.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]
[tool.uv.sources]
common-db = { path = "../../packages/common_db" }
message-broker = { path = "../../packages/message_broker" }
