[project]
name = "matching"
version = "0.0.1"
description = "Users matching service"
readme = "README.md"
authors = [
    { name = "eles13", email = "pitanoves@gmail.com" }
]
requires-python = "==3.12.7"
dependencies = [
    "aiofiles>=24.1.0",
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.115.2",
    "google-cloud-logging>=3.11.3",
    "google-cloud-storage>=2.18.2",
    "google-cloud-secret-manager>=2.20.0",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "python-multipart>=0.0.7",
    "asyncpg>=0.30.0",
    "pip>=24.2",
    "setuptools>=75.2.0",
    "debugpy>=1.8.7",
    "cloud-sql-python-connector>=1.13.0",
    "pg8000>=1.31.2",
    "catboost==1.2.7",
    "pandas>=2.1.4",
    "numpy>=1.26.4",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.24.0",
    "common-db",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
matching = "matching.main:app"

[tool.uv.sources]
common-db = { path = "../../packages/common_db" }

[tool.uv]
dev-dependencies = [
    "debugpy>=1.8.7",
    "pylint>=3.3.1",
    "ruff>=0.7.0",
    "httpx>=0.28.1",
    "pytest-env>=1.1.5",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
extend = "../../ruff.toml"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["matching"]

[tool.setuptools.package-data]
matching = [
    "config/config_proto/*.proto",
    "config/config_proto/*.textproto"
]

[tool.pylint]
max-line-length = 120
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "W0511",  # fixme
    "R0914",  # too-many-locals
    "R0903",  # too-few-public-methods
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
