[project]
name = "notifications"
version = "0.1.0"
description = "Notification service"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "aiosmtplib>=4.0.0",
    "common-db",
    "fastapi>=0.115.8",
    "loguru>=0.7.3",
    "message-broker",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
notifications-service = "notifications.main:app"

[tool.uv.sources]
common-db = { path = "../../packages/common_db" }
message-broker = { path = "../../packages/message_broker" }

[tool.uv]
dev-dependencies = [
    "debugpy>=1.8.7",
    "pylint>=3.3.1",
    "ruff>=0.7.0",
    "httpx>=0.28.1",
    "pytest-env>=1.1.5",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0"
]

[tool.ruff]
extend = "../../ruff.toml"
