[project]
name = "telegram-bot"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "und3v3l0p3d", email = "prohibitme@ya.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.16.0",
    "fastapi>=0.115.6",
    "google-cloud-secret-manager>=2.22.0",
]

[project.scripts]
telegram-bot = "telegram_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-env>=1.1.5",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]

[tool.pytest.ini_options]
env = [
    "BOT_TOKEN = 1:pytest-bot-token",
]
